# MyThesis-Engineering

./: CMakeLists.txt  README.txt
application/: AGMEsmp.cpp  AGS.cpp  AGisland-2islas.cpp  AGisland.cpp  CMakeLists.txt  Error.cpp  GeneradorES.cpp
build-old/: CMakeCache.txt  Makefile  cmake_install.cmake
build-old/application/: AGMEsmp  AGMEsmp.param  AGS  AGS.param  AGisland-2islas  AGisland-4islas  Allposition.txt  Anclas.txt  Makefile  Matriz1.txt  Matriz3.txt  cmake_install.cmake  generadorES  generarES.param  graficarError  graficarError.param
build-old/datos/: Makefile  cmake_install.cmake
build-old/doc/: Makefile  cmake_install.cmake  doxyfile
build-old/src/: Makefile  cmake_install.cmake
build-old/test/: Makefile  cmake_install.cmake
datos/: AGMEsmp2.param  AGMEsmp6.param  AGS.param  AGisland-2islas.param  AGisland.param  Anclas40.txt  CMakeLists.txt  Matriz2.txt  Matriz4.txt  Matriz40.txt
src/: CMakeLists.txt  GnuplotMonitor.cpp  GnuplotMonitor.h  IndiInit.h  Individuo.h  Step to step.odt  escenario.cpp  escenario.h  graphError.cpp  graphError.h  individuoCruza.cpp  individuoCruza.h  individuoCruza1.h  individuoCruza2.h  individuoMutacion.h  individuoMutacion1.cpp  individuoMutacion1.h  localizacionEval.cpp  localizacionEval.h  localizacionEvalPenal.cpp  localizacionEvalPenal.h
src/Codigo/: Anclas.txt  Coordenadas.cpp  Coordenadas.xlsx  Ficheros.cpp  MatrizOfCopy.txt  MatrizRuido1.txt  MatrizRuido10.txt  MatrizRuido5.txt  Prueba 1.xlsx  Prueba 2.xlsx  Prueba 3.xlsx  Prueba.cpp  Vectores.cpp  escenario.cpp  escenario.h  estadistica.txt  funcion.cpp  localiza.cpp  matriz.txt  mutacion.cpp  prueba.h  push_back.cpp  ruido  ruido.cpp  vectorprueba.cpp
test/: Pruebas.rtf  Secuencial.tex
